# pydep

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
example/: demo.py
example/simple_repo/: file1.py
example/simple_repo/folder1/: file2.py
src/: Node.py  build_repo_graph.py  extractor.py  test.py  travel_graph.py
src/pycall/: build_repo_graph.py  constant.py  extractor.py  travel_graph.py
src/pycall.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pycall/utils/: __init__.py  parser_utils.py  utils.py
src/pydepcall/: Node.py  extractor.py  travel_graph.py
src/pydepcall/utils/: __init__.py  parser_utils.py
