[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycall"
version = "0.0.6"
authors = [
  { name="Nam Le Hai", email="nam.lh173264@gmail.com" },
]
description = "Extract dependencies of modules (function, class, import) in python repository"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "GitPython==3.1.43",
    "tree-sitter==0.22.3",
    "tree-sitter-python==0.21.0",
    "codetext==0.0.9"
]

[project.urls]
"Homepage" = "https://github.com/FSoft-AI4Code/py-dependency"
"Bug Tracker" = "https://github.com/FSoft-AI4Code/py-dependency/issues"