[metadata]
name = pydepcall
version = 0.0.1
author = Nam Le Hai
author_email = nam.lh173264@gmail.com
description = Extract dependencies of modules (function, class, import) in python repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FSoft-AI4Code/pydepcall
project_urls =
    repository = https://github.com/FSoft-AI4Code/pydepcall
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src